[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chatrepl"
version = "0.3.0a8"
description = "A Python 2.7+ REPL for interacting with LLMs with an OpenAI Chat Completions-compatible API."
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "chat-completions-conversation-with-tools",
    "create-inspect-typeddict",
    "enum34; python_version < '3.4'",
    "file-to-unicode-base64-data-uri",
    "get-unicode-multiline-input-with-editor",
    "get-unicode-shell",
    "live-tee-and-capture",
    "posix-or-nt",
    "textcompat",
    "typing; python_version < '3.5'"
]

[project.scripts]
chatrepl = "chatrepl:main"

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/chatrepl"
"Bug Tracker" = "https://github.com/jifengwu2k/chatrepl/issues"
